force-app/main/default/objects/MqlSecrets__c/MqlSecrets__c.object-meta.xml
<CustomObject>
  <label>MQL Secrets</label>
  <customSettingsType>Hierarchy</customSettingsType>
  <description
  >Org-level secrets for MQL support integrations (do not store in Git).</description>
</CustomObject>