force-app/main/default/objects/MqlSecrets__c/fields/ApiGatewayApiKey__c.field-meta.xml
<CustomField>
  <fullName>ApiGatewayApiKey__c</fullName>
  <label>API Gateway API Key</label>
  <length>255</length>
  <type>Text</type>
  <description
  >x-api-key for the MQL/Ticket summarizer API Gateway.</description>
</CustomField>