force-app/main/default/objects/MqlSecrets__c/fields/HubspotPrivateAppToken__c.field-meta.xml
<CustomField>
  <fullName>HubspotPrivateAppToken__c</fullName>
  <label>HubSpot Private App Token</label>
  <length>255</length>
  <type>Text</type>
  <description
  >HubSpot Private App token used for the Contact Us integration.</description>
</CustomField>