force-app/main/default/objects/MqlSecrets__c/fields/RecaptchaSecretKey__c.field-meta.xml
<CustomField>
  <fullName>RecaptchaSecretKey__c</fullName>
  <label>reCAPTCHA Secret Key</label>
  <length>255</length>
  <type>Text</type>
  <description
  >Google reCAPTCHA secret used for public form submissions.</description>
</CustomField>